--- a/index.html
+++ b/index.html
@@ -52,6 +52,110 @@
         .plan-editor-modal .details-arrow { transition: transform 0.2s; }
         .plan-editor-modal details[open] > summary .details-arrow { transform: rotate(90deg); }
 
+        /* --- Mobile Responsive Styles --- */
+        @media (max-width: 768px) {
+            /* Make the main table layout stack vertically */
+            .responsive-table {
+                border: none;
+                width: 100%;
+            }
+
+            .responsive-table thead {
+                display: none; /* Hide table headers on mobile */
+            }
+
+            .responsive-table, .responsive-table tbody, .responsive-table tr {
+                display: block;
+            }
+
+            .responsive-table tr {
+                border: 1px solid #e5e7eb; /* dark:border-gray-700 */
+                border-radius: 0.75rem; /* rounded-lg */
+                margin-bottom: 1rem;
+                padding: 1rem;
+                box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
+            }
+            .dark .responsive-table tr {
+                border-color: #374151; /* dark:border-gray-700 */
+            }
+
+            .responsive-table td {
+                display: grid;
+                grid-template-columns: 1fr 2fr;
+                align-items: center;
+                gap: 1rem;
+                padding: 0.5rem 0; /* Vertical padding, no horizontal */
+                border-bottom: 1px solid #f3f4f6; /* A very light separator */
+            }
+
+            .dark .responsive-table td {
+                border-bottom-color: #374151; /* dark border for separator */
+            }
+
+
+            .responsive-table td:last-child {
+                border-bottom: none;
+            }
+
+            /* Use a pseudo-element to create the label from the data-label attribute */
+            .responsive-table td[data-label]::before {
+                content: attr(data-label);
+                font-weight: 500; /* medium */
+                color: #6b7280; /* text-gray-500 */
+                white-space: nowrap;
+            }
+            .dark .responsive-table td[data-label]::before {
+                color: #9ca3af; /* dark:text-gray-400 */
+            }
+
+            /* Special handling for the first cell (Exercise Name) to make it a header */
+            .responsive-table td.exercise-name-cell {
+                display: block;
+                grid-template-columns: none;
+                padding-bottom: 0.75rem;
+                margin-bottom: 0.75rem;
+                border-bottom: 2px solid #e5e7eb;
+                font-size: 1.125rem; /* text-lg */
+                font-weight: 600; /* semibold */
+            }
+            .dark .responsive-table td.exercise-name-cell {
+                border-bottom-color: #4b5563;
+            }
+
+            /* The exercise name cell doesn't need a ::before label */
+            .responsive-table td.exercise-name-cell::before {
+                display: none;
+            }
+
+            /* Adjust input fields for better mobile experience */
+            .responsive-table [contenteditable="true"], .responsive-table div {
+                 text-align: right;
+                 width: 100%;
+            }
+
+            /* Re-align exercise details */
+            .responsive-table .exercise-name-cell div {
+                text-align: left;
+            }
+
+            /* Make top-level controls stack */
+            .top-controls-container {
+                flex-direction: column;
+                align-items: stretch;
+                gap: 1rem;
+            }
+            .top-controls-container nav {
+                order: 2; /* Move tabs below stats on mobile */
+                justify-content: center;
+            }
+            .stats-container {
+                flex-direction: column;
+                align-items: stretch;
+                gap: 0.5rem;
+                order: 1; /* Move stats above tabs */
+            }
+        }
+
     </style>
 </head>
 <body class="bg-gray-100 dark:bg-gray-900 text-gray-800 dark:text-gray-200 antialiased">
@@ -597,7 +701,7 @@
             weekContent.className = 'px-6 pb-6';
 
             const topControlsContainer = document.createElement('div');
-            topControlsContainer.className = 'flex flex-wrap justify-between items-end border-b border-gray-200 dark:border-gray-700 mb-6';
+            topControlsContainer.className = 'top-controls-container flex flex-wrap justify-between items-end border-b border-gray-200 dark:border-gray-700 mb-6';
 
             const tabsContainer = document.createElement('nav');
             tabsContainer.className = '-mb-px flex space-x-1 sm:space-x-4';
@@ -613,7 +717,7 @@
             });
 
             const statsContainer = document.createElement('div');
-            statsContainer.className = 'flex items-end gap-4 pb-3';
+            statsContainer.className = 'stats-container flex items-end gap-4 pb-3';
 
             const bodyWeightSection = document.createElement('div');
             bodyWeightSection.className = 'flex items-end gap-3';
@@ -681,7 +785,7 @@
              return `
                 <h3 class="text-xl font-semibold mb-4 text-gray-800 dark:text-gray-100">${dayData.workoutName}</h3>
                 <div class="overflow-x-auto">
-                    <table class="min-w-full divide-y divide-gray-200 dark:divide-gray-700 text-sm">
+                    <table class="responsive-table min-w-full divide-y divide-gray-200 dark:divide-gray-700 text-sm">
                         <thead class="bg-gray-50 dark:bg-gray-700">
                             <tr>
                                 <th class="pl-4 pr-2 py-3 text-left font-medium text-gray-500 dark:text-gray-300 uppercase tracking-wider">Exercise</th>
@@ -696,16 +800,16 @@
                                 const displayedTotal = (typeof total.value === 'number') ? total.value.toFixed(1) : total.value;
                                 return `
                                 <tr class="hover:bg-gray-50 dark:hover:bg-gray-700/50 transition-colors">
-                                    <td class="pl-4 pr-2 py-4 whitespace-nowrap font-medium text-gray-900 dark:text-white">
+                                    <td class="exercise-name-cell pl-4 pr-2 py-4 whitespace-nowrap font-medium text-gray-900 dark:text-white">
                                         <div>${ex.name}</div>
-                                        <div class="text-xs text-gray-500 dark:text-gray-400 flex items-center gap-x-3 mt-1">
+                                        <div class="text-xs text-gray-500 dark:text-gray-400 flex items-center gap-x-3 mt-1 font-normal">
                                             <span>${ex.sets}x${ex.reps}</span>
                                             <span class="text-gray-300 dark:text-gray-600">|</span>
                                             <span>Rest: ${ex.rest}</span>
                                             ${ex.isSupersetStart ? '<span class="ml-1 px-2 py-0.5 text-xs font-semibold text-purple-800 bg-purple-100 dark:bg-purple-900 dark:text-purple-200 rounded-full">Superset</span>' : ''}
                                         </div>
                                     </td>
-                                    <td class="px-2 py-4 text-center">
+                                    <td data-label="Weight (kg)" class="px-2 py-4 text-center">
                                         ${isBodyweight(ex) ? 
                                             `<span class="text-gray-400 dark:text-gray-500">N/A</span>` : 
                                             `<div contenteditable="true" data-week-index="${weekIndex}" data-day-id="${dayData.id}" data-ex-index="${exIndex}" data-field="weight" class="p-1 min-w-[60px] text-center border-b dark:border-gray-600 focus:border-blue-500">${ex.weight || ''}</div>`
@@ -716,13 +820,13 @@
                                         if (setIndex < setTarget) {
                                             const setData = ex.setsData ? (ex.setsData[setIndex] || { reps: '' }) : { reps: '' };
                                             return `
-                                                <td class="px-2 py-4">
+                                                <td data-label="Set ${setIndex + 1}" class="px-2 py-4">
                                                      <div contenteditable="true" data-week-index="${weekIndex}" data-day-id="${dayData.id}" data-ex-index="${exIndex}" data-set-index="${setIndex}" data-field="reps" class="p-1 min-w-[40px] text-center border-b dark:border-gray-600 focus:border-blue-500">${setData.reps || ''}</div>
                                                 </td>`;
                                         }
                                         return '<td class="px-2 py-4"></td>';
                                     }).join('')}
-                                    <td id="total-week-${weekIndex}-day-${dayId}-ex-${exIndex}" class="px-4 py-4 text-center font-semibold text-gray-800 dark:text-gray-200">${displayedTotal} ${total.unit}</td>
+                                    <td data-label="Total" id="total-week-${weekIndex}-day-${dayId}-ex-${exIndex}" class="px-4 py-4 text-center font-semibold text-gray-800 dark:text-gray-200"><div>${displayedTotal} ${total.unit}</div></td>
                                 </tr>
                             `}).join('')}
                         </tbody>
