--- a/index.html
+++ b/index.html
@@ -74,17 +74,19 @@
                 margin-bottom: 1rem;
                 padding: 1rem;
                 box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
+                background-color: #ffffff; /* Add white background for cards */
             }
             .dark .responsive-table tr {
                 border-color: #374151; /* dark:border-gray-700 */
+                background-color: #1f2937; /* dark:bg-gray-800 */
             }
 
             .responsive-table td {
                 display: grid;
-                grid-template-columns: 1fr 2fr;
+                grid-template-columns: 1fr 1fr; /* Equal columns for label and value */
                 align-items: center;
                 gap: 1rem;
-                padding: 0.5rem 0; /* Vertical padding, no horizontal */
+                padding: 0.75rem 0; /* Vertical padding, no horizontal */
                 border-bottom: 1px solid #f3f4f6; /* A very light separator */
             }
 
@@ -107,6 +109,31 @@
             .dark .responsive-table td[data-label]::before {
                 color: #9ca3af; /* dark:text-gray-400 */
             }
+            
+            /* Center all values/inputs within their grid cell */
+            .responsive-table td > * {
+                justify-self: center;
+                text-align: center;
+                width: 100%;
+                max-width: 100px; /* Constrain the width for a neater look */
+            }
+
+            /* Style the editable fields to look like inputs */
+            .responsive-table [contenteditable="true"] {
+                padding: 0.25rem 0.5rem;
+                border-radius: 0.375rem; /* rounded-md */
+                background-color: #f3f4f6;
+                border: 1px solid #d1d5db;
+            }
+            .dark .responsive-table [contenteditable="true"] {
+                background-color: #4b5563;
+                border-color: #6b7280;
+            }
+            .responsive-table [contenteditable="true"]:focus {
+                 box-shadow: 0 0 0 2px rgba(59, 130, 246, 0.5);
+                 border-color: #3b82f6;
+            }
+
 
             /* Special handling for the first cell (Exercise Name) to make it a header */
             .responsive-table td.exercise-name-cell {
@@ -127,15 +154,17 @@
                 display: none;
             }
 
-            /* Adjust input fields for better mobile experience */
-            .responsive-table [contenteditable="true"], .responsive-table div {
-                 text-align: right;
-                 width: 100%;
-            }
-
-            /* Re-align exercise details */
-            .responsive-table .exercise-name-cell div {
+            /* Reset alignment and width for the exercise name content */
+            .responsive-table td.exercise-name-cell > * {
+                justify-self: start;
                 text-align: left;
+                max-width: none;
+            }
+            
+            /* The N/A text for bodyweight exercises */
+            .responsive-table td > span {
+                font-style: italic;
+                color: #9ca3af;
             }
 
             /* Make top-level controls stack */
