--- a/index.html
+++ b/index.html
@@ -122,16 +122,27 @@
             .responsive-table [contenteditable="true"] {
                 padding: 0.25rem 0.5rem;
                 border-radius: 0.375rem; /* rounded-md */
-                background-color: #f3f4f6;
-                border: 1px solid #d1d5db;
+                background-color: #f3f4f6; /* bg-gray-100 */
+                border: 1px solid #d1d5db; /* border-gray-300 */
+                color: #111827; /* text-gray-900 */
             }
             .dark .responsive-table [contenteditable="true"] {
-                background-color: #4b5563;
-                border-color: #6b7280;
+                background-color: #4b5563; /* bg-gray-600 */
+                border-color: #6b7280; /* border-gray-500 */
+                color: #f9fafb; /* text-gray-50 */
             }
             .responsive-table [contenteditable="true"]:focus {
                  box-shadow: 0 0 0 2px rgba(59, 130, 246, 0.5);
                  border-color: #3b82f6;
+            }
+
+            /* Style for the Total value */
+            .responsive-table td[data-label="Total"] > div {
+                font-weight: 700; /* bold */
+                color: #2563eb; /* text-blue-600 */
+            }
+            .dark .responsive-table td[data-label="Total"] > div {
+                color: #60a5fa; /* dark:text-blue-400 */
             }
 
 
@@ -164,7 +175,10 @@
             /* The N/A text for bodyweight exercises */
             .responsive-table td > span {
                 font-style: italic;
-                color: #9ca3af;
+                color: #9ca3af; /* text-gray-400 */
+            }
+             .dark .responsive-table td > span {
+                color: #d1d5db; /* dark:text-gray-300 */
             }
 
             /* Make top-level controls stack */
