--- a/index.html
+++ b/index.html
@@ -828,7 +828,7 @@
              return `
                 <h3 class="text-xl font-semibold mb-4 text-gray-800 dark:text-gray-100">${dayData.workoutName}</h3>
                 <div class="overflow-x-auto">
-                    <table class="responsive-table min-w-full divide-y divide-gray-200 dark:divide-gray-700 text-sm">
+                    <table class="responsive-table min-w-full text-sm">
                         <thead class="bg-gray-50 dark:bg-gray-700">
                             <tr>
                                 <th class="pl-4 pr-2 py-3 text-left font-medium text-gray-500 dark:text-gray-300 uppercase tracking-wider">Exercise</th>
@@ -837,7 +837,7 @@
                                 <th class="px-4 py-3 text-center font-medium text-gray-500 dark:text-gray-300 uppercase tracking-wider">Total</th>
                             </tr>
                         </thead>
-                        <tbody class="bg-white dark:bg-gray-800 divide-y divide-gray-200 dark:divide-gray-700">
+                        <tbody class="md:bg-white md:dark:bg-gray-800 md:divide-y divide-gray-200 dark:divide-gray-700">
                             ${(dayData.exercises || []).map((ex, exIndex) => {
                                 const total = calculateTotal(ex);
                                 const displayedTotal = (typeof total.value === 'number') ? total.value.toFixed(1) : total.value;
@@ -1445,3 +1445,4 @@
     </script>
 </body>
 </html>
+
